# linc-watchtower

./: .env.example  .gitignore  CLAUDE.md  LINC.md  README.md  linc-manifest.yaml  pyproject.toml
.github/workflows/: test.yml
src/linc_watchtower/: __init__.py  cli.py  config.py  rtsp.py
src/linc_watchtower/analyzers/: __init__.py  base.py  motion.py
tests/: test_config.py  test_motion.py
