[project]
name = "linc-watchtower"
version = "0.1.0"
description = "AvertX/OpenEye NVR automation — RTSP frame ingest + pluggable analyzers"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "structlog>=25.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
watchtower = "linc_watchtower.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["linc_watchtower"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
